--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,54 +7,149 @@
     --address-color: #ffffff60;
     --btn-color: #F5F4FA;
     --slider-color: #2F303A;
+    --header-border-color: #ECECEC;
+    --cards-margin: 30px;
 }
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--title-color);
 }
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 .list {
     list-style: none;
 }
-.logo {
-    font-family: 'Raleway';
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: var(--title-color);
+.section {
+    padding: 94px 0;
+}
+.items {
+    padding: 0;
+    margin: 0;
+}
+.link {
     text-decoration: none;
 }
+.image {
+    width: 370px;
+    display: block;
+}
+.title {
+    margin: 0 0 4px 0;
+}
+/* Header options */
+
+.head-page {
+    border-bottom: 1px solid var(--header-border-color);
+}
+
+.head-page > .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-page {
+    display: flex;
+    align-items: center;
+}
+
+/* Logo and nav menu */
+
+.logo {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    color: var(--title-color);
+    letter-spacing: 0.03em;
+}
+
 .web-style {
     color: var(--primary-color);
 }
-
+.nav-menu {
+    margin-left: 90px;
+    display: flex;
+}
+.nav-list {
+    margin-right: 50px;
+}
+.nav-list:last-child {
+    margin-right: 0;
+}
 .menu-link {
+    display: block;
+    padding: 32px 0;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
-    letter-spacing: 0.02em;
     color: var(--title-color);
-    text-decoration: none;
+    letter-spacing: 0.02em;
 }
 .portfolio {
-    color:var(--primary-color);
+    color: var(--primary-color);
+}
+
+/* Contacts section */
+
+.contact-lists {
+    display: flex;
+    align-items: center;
+}
+.contact-list {
+    margin-left: 50px;
+}
+.contact-list:first-child {
+    margin-left: 0;
 }
 .contact-link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
-    letter-spacing: 0.02em;
     color: var(--primary-text-color);
-    text-decoration: none;
+    letter-spacing: 0.02em;
 }
-
 .menu-link:hover,
 .menu-link:focus,
 .contact-link:hover,
 .contact-link:focus {
     color: var(--primary-color);
 }
+
+/* Title Hidden */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.button-lists {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.button-list {
+    margin-right: 8px;
+}
+.button-list:last-child {
+    margin-right: 0;
+}
 .btn {
+    padding: 6px 22px;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
     background-color: var(--btn-color);
@@ -63,18 +158,35 @@ body {
     font-size: 16px;
     line-height: 1.6;
     letter-spacing: 0.03em;
+    border: none;
+    border-radius: 4px;
 }
 .all {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     background-color: var(--primary-color);
     color: var(--secondary-color);
 }
 .btn:hover,
 .btn:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     background-color: var(--primary-color);
     color: var(--secondary-color);
 }
-.product-link {
-    text-decoration: none;
+.products-lists {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-1 * var(--cards-margin));
+    margin-bottom: calc(-1 * var(--cards-margin));
+}
+.product-list {
+    width: calc((100% - 3) / 3 - var(--cards-margin));
+    margin-right: var(--cards-margin);
+    margin-bottom: var(--cards-margin);
+}
+.card-description {
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
 }
 .product-name {
     font-weight: bold;
@@ -84,42 +196,49 @@ body {
     color: var(--title-color);
 }
 .discribe {
+    margin: 0;
     font-size: 16px;
     line-height: 1.9;
     color: var(--primary-text-color);
     letter-spacing: 0.03em;
 }
 .footer-page {
+    padding: 60px 0;
     background-color: var(--slider-color);
 }
-
 .footer-logo {
-    font-family: 'Raleway';
-    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
     letter-spacing: 0.03em;
-    color: var(--secondary-color);
+    color:var(--secondary-color);
     text-decoration: none;
 }
-
 .company-adress {
+    margin: 0 0 9px 0;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
 }
-
 .address-link {
     font-style: normal;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--address-color);
-    text-decoration: none;
 }
-
 .address-link:hover,
 .address-link:focus {
     color: var(--primary-color);
+}
+.contact-item {
+    display: block;
+    margin-bottom: 9px;
+}
+.contact-item:last-child {
+    margin-bottom: 0;
 }
