--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ body {
 /* Logo and nav menu */
 
 .logo {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
@@ -86,7 +86,7 @@ body {
     color: var(--primary-color);
 }
 .nav-menu {
-    margin-left: 90px;
+    margin-left: 93px;
     display: flex;
 }
 .nav-list {
@@ -156,7 +156,6 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
@@ -192,7 +191,7 @@ body {
     margin-right: calc(-1 * var(--features-margin));
 }
 .features-list {
-    width: calc(100% / 4 - var(--features-margin));
+    width: calc((100% - 4 * var(--features-margin)) / 4);
     margin-right: var(--features-margin);
 }
 .name {
@@ -226,7 +225,7 @@ body {
     margin-right: calc(-1 * var(--features-margin));
 }
 .team-item {
-    width: calc(100% / 4 - var(--features-margin));
+    width: calc((100% - 4 * var(--features-margin)) / 4);
     margin-right: var(--features-margin);
     background-color: var(--secondary-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
