--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -218,6 +218,7 @@ body {
 }
 .company-adress {
     margin: 0 0 9px 0;
+    font-style: normal;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
