--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ body {
 .company-adress {
     margin: 0 0 9px 0;
     font-size: 14px;
+    font-style: normal;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
